# iu-bigdata

./: README.md
assignment02/: create_n_copy.sql  docker-compose.yml  foursquare.json  my_friendship_after.tsv  my_friendship_before.tsv  my_users.tsv  queries.sql
assignment03/: docker-compose.yml  main.py  pyproject.toml
assignment05/: [BD]_Assignment05_Apache_Spark_ML.ipynb  product_ids.csv
assignment05/products/: part001  part002  part003  part004  part005  part006  part007  part008  part009  part010  part011  part012  part013  part014  part015  part016  part017  part018  part019  part020  part021  part022  part023  part024  part025  part026  part027  part028  part029  part030  part031  part032  part033  part034  part035  part036  part037  part038  part039  part040  (+34 more)
project/: README.md  [BD]_Project.ipynb
support/: dump.py  load.py
