[tool.poetry]
name = "assignment03"
version = "0.1.0"
description = ""
authors = ["aalexren <chernicaar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.25.1"
urllib3 = "1.26.5"
pymongo = "3.11.4"
python-dateutil = "2.8.2"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
